# TMS_fastAPI

./: .dockerignore  .gitignore  Django vs SQLAlchemy ASYNC Queries .md  Django vs SQLAlchemy HARD.md  Django vs SQLAlchemy SYNC Queries .md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: database.py  models.py
app/handlers/: auth.py  posts.py
app/schemas/: auth.py  posts.py
app/services/: auth.py  encrypt.py  posts.py  users.py
app/services/cache/: __init__.py  base.py  local.py  redis.py
app/services/celery_tasks/: celery.py
migrations/: env.py
migrations/versions/: 7f5bed142b05_0001_init.py  ce215963bfcc_0002_add_tags.py
